--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -2,17 +2,46 @@
   "_version": "1.65.0",
   "sap.app": {
     "id": "ui5.walkthrough",
-    "title": "SAPUI5 Walkthrough",
+    "title": "{{appTitle}}",
+    "description": "{{appDescription}}s",
     "applicationVersion": { "version": "0.1" },
-    "type": "application"
+    "type": "application",
+    "i18n": "i18n/i18n.properties"
   },
   "sap.ui": {
     "technology": "UI5",
-    "icons": {},
     "deviceTypes": {
       "desktop": true,
       "tablet": true,
       "phone": true
+    }
+  },
+  "sap.ui5": {
+    "dependencies": {
+      "minUI5Version": "1.108.0",
+      "libs": {
+        "sap.ui.core": {},
+        "sap.m": {}
+      }
+    },
+    "models": {
+      "i18n": {
+        "type": "sap.ui.model.resource.ResourceModel",
+        "settings": {
+          "bundleName": "ui5.walkthrough.i18n.i18n",
+          "supportedLocales": ["en"],
+          "fallbackLocale": "en"
+        }
+      }
+    },
+    "rootView": {
+      "viewName": "ui5.walkthrough.view.App",
+      "type": "XML",
+      "id": "app"
+    },
+    "contentDensities": {
+      "compact": true,
+      "cozy": true
     }
   }
 }
