Step 14: Custom CSS

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -39,6 +39,9 @@
       "type": "XML",
       "id": "app"
     },
+    "resources": {
+      "css": [{ "uri": "css/style.css" }]
+    },
     "contentDensities": {
       "compact": true,
       "cozy": true
