--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -32,6 +32,10 @@
           "supportedLocales": ["en"],
           "fallbackLocale": "en"
         }
+      },
+      "invoice": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "Invoices.json"
       }
     },
     "rootView": {
