Step 25: Remote OData service

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "The UI5 walkthrough application",
   "scripts": {
     "start": "ui5 serve -o index.html"
+  },
+  "devDependencies": {
+    "ui5-middleware-simpleproxy": "^3.4.3"
   }
 }
