--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -6,7 +6,16 @@
     "description": "{{appDescription}}s",
     "applicationVersion": { "version": "0.1" },
     "type": "application",
-    "i18n": "i18n/i18n.properties"
+    "i18n": "i18n/i18n.properties",
+    "dataSources": {
+      "invoiceRemote": {
+        "uri": "V2/Northwind/Northwind.svc/",
+        "type": "OData",
+        "settings": {
+          "odataVersion": "2.0"
+        }
+      }
+    }
   },
   "sap.ui": {
     "technology": "UI5",
@@ -34,8 +43,7 @@
         }
       },
       "invoice": {
-        "type": "sap.ui.model.json.JSONModel",
-        "uri": "Invoices.json"
+        "dataSource": "invoiceRemote"
       }
     },
     "rootView": {
