Step 31: Routing with parameters

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The UI5 walkthrough application",
   "scripts": {
-    "start": "ui5 serve"
+    "start": "ui5 serve -o test/mockServer.html"
   },
   "devDependencies": {
     "ui5-middleware-simpleproxy": "^3.4.3"
