--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "The UI5 walkthrough application",
   "scripts": {
-    "start": "ui5 serve -o test/mockServer.html"
+    "start": "ui5 serve -o test/mockServer.html",
+    "build": "ui5 build --all --clean-dest",
+    "serve-dist": "ws --compress -d dist --open"
   },
   "devDependencies": {
+    "local-web-server": "^5.4.0",
     "ui5-middleware-simpleproxy": "^3.4.3"
   }
 }
